install dependencies. add header/footer, crate 4 pages and navigation. start grid

--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,140 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="es">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, user-scalable=no">
+        <title>LlavaRock. Festival de música</title>
+        <meta name="description" content="Xavier Morell Llorens, Curriculum Vitae (CV).">
+        <meta name="keywords" content="Sant andreu de Llavaneres, music, musica, festival">
+        <link rel="icon" type="image/png" href="assets/images/favicon.ico"/>
         <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
-        <title>UOC Boilerplate</title>
     </head>
     <body>
-        <div class="container">
-            <div class="box box1">1</div>
-            <div class="box box2">2</div>
-            <div class="box box3">3</div>
-            <div class="box box4">4</div>
-            <div class="box box5">5</div>
-            <div class="box box6">6</div>
-            <div class="box box7">7</div>
-            <div class="box box8">8</div>
-            <div class="box box9">9</div>
-            <div class="box box10">10</div>
-        </div>
+        <header class="row info-row px-3 py-2">
+            <a class="col-auto logo" href="/">
+                <img src="assets/images/escut_llavaneres.png" alt="Sant Andreu de Llavaneres" class="logo__img" title="Escut Sant Andreu de Llavaneres">
+            </a>
+            <div class="col px-0"></div>
+            <a class="col-auto info-row__link" href="grups.html">
+                <span class="align-middle info-row__text">Grups</span>
+            </a>
+            <a class="col-auto info-row__link" href="blog.html">
+                <span lang="en" class="align-middle info-row__text">Blog</span>
+            </a>
+            <a class="col-auto info-row__link" href="contacte.html">
+                <span class="align-middle info-row__text">Contacte</span>
+            </a>
+        </header>
+        <div class="body">
+            <div class="grid-container my-4 mx-2">
+                <div class="grid-item">
+                    <img src="assets/images/bands/els_catarres.jpg" alt="Catarres" class="grid-item__image">
+                    <div class="grid-item__info--hovershow">
+                        <span></span>
+                    </div>
+                </div>
+                <div class="grid-item align-items-center">
+                    <img src="assets/images/bands/els_catarres.jpg" alt="Catarres" class="grid-item__image">
+                    <div class="grid-item__info--hovershow grid-item__info">
+                        <span class="align-middle">Els catarres</span>
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <img src="assets/images/bands/els_catarres.jpg" alt="Catarres" class="grid-item__image">
+                    <div class="grid-item__info--hovershow">
 
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <img src="assets/images/bands/els_catarres.jpg" alt="Catarres" class="grid-item__image">
+                    <div class="grid-item__info--hovershow">
+
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <img src="assets/images/bands/els_catarres.jpg" alt="Catarres" class="grid-item__image">
+                    <div class="grid-item__info--hovershow">
+
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <img src="assets/images/bands/els_catarres.jpg" alt="Catarres" class="grid-item__image">
+                    <div class="grid-item__info--hovershow">
+
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <img src="assets/images/bands/els_catarres.jpg" alt="Catarres" class="grid-item__image">
+                    <div class="grid-item__info--hovershow">
+
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <img src="assets/images/bands/els_catarres.jpg" alt="Catarres" class="grid-item__image">
+                    <div class="grid-item__info--hovershow">
+
+                    </div>
+                </div>
+                <div class="grid-item">
+                    <img src="assets/images/bands/els_catarres.jpg" alt="Catarres" class="grid-item__image">
+                    <div class="grid-item__info--hovershow">
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <footer>
+            <div class="footer border-bottom border-white">
+                <div class="row mx-2 mb-2">
+                    <div class="col-auto mx-auto">
+                        Disfruta del festival a Sant Andreu de llavaneres.
+                        <a href="https://goo.gl/maps/kMkjYZH95a5deMnXA">
+                            <i class="fas fa-map-marker-alt"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="row mb-2">
+                    <div class="col-md text-center">
+                        <i class="fas fa-phone pr-1"></i>937023600
+                    </div>
+                    <div class="col-md text-center">
+                        <i class="fas fa-envelope pr-1"></i>ajuntament@llavaneres.cat
+                    </div>
+                    <div class="col-md text-center">
+                        <i class="fas fa-calendar-alt pr-1"></i>28-30 Novembre
+                    </div>
+                </div>
+            </div>
+            <div class="row px-3 py-1 info-row">
+                <div class="col-auto logo order-0">
+                    <img src="assets/images/escut_llavaneres.png" alt="Sant Andreu de Llavaneres" class="logo__img" title="Escut Sant Andreu de Llavaneres">
+                </div>
+                <div class="col px-0 order-1"></div>
+                <a class="col-sm-auto info-row__link info-row__link--selected text-center order-2" href="/">
+                    <span class="align-middle info-row__text">Inici</span>
+                </a>
+                <a class="col-sm-auto info-row__link text-center order-2" href="grups.html">
+                    <span class="align-middle info-row__text">Grups</span>
+                </a>
+                <a class="col-sm-auto info-row__link text-center order-2" href="blog.html">
+                    <span lang="en" class="align-middle info-row__text">Blog</span>
+                </a>
+                <a class="col-sm-auto info-row__link text-center order-2" href="contacte.html">
+                    <span class="align-middle info-row__text">Contacte</span>
+                </a>
+                <div class="col px-0 order-3"></div>
+                <div class="col-auto social order-1 order-sm-4">
+                    <a class="social__item" href="https://www.facebook.com/AjLlavaneres/">
+                        <img src="assets/images/facebooklogo.png" alt="Facebook" class="social__img social__img--facebook" title="Facebook">
+                    </a>
+                    <a class="social__item" href="https://twitter.com/AjLlavaneres">
+                        <img src="assets/images/twitter.png" alt="Twitter" class="social__img" title="Twitter">
+                    </a>
+                </div>
+            </div>
+        </footer>
         <script src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
     </body>
 </html>
