create groups page. and home page with @supports

--- a/src/blog.html
+++ b/src/blog.html
@@ -38,7 +38,7 @@
 <footer>
     <div class="footer border-bottom border-white">
         <div class="row mx-2 mb-2">
-            <div class="col-auto mx-auto">
+            <div class="col-auto mx-auto text-center">
                 Disfruta del festival a Sant Andreu de llavaneres.
                 <a href="https://goo.gl/maps/kMkjYZH95a5deMnXA">
                     <i class="fas fa-map-marker-alt"></i>
