--- a/src/grups.html
+++ b/src/grups.html
@@ -1,85 +1,158 @@
 <!DOCTYPE html>
 
 <html lang="es">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
-    <title>LlavaRock. Festival de música</title>
-    <meta name="description" content="Xavier Morell Llorens, Curriculum Vitae (CV).">
-    <meta name="keywords" content="Sant andreu de Llavaneres, music, musica, festival">
-    <link rel="icon" type="image/png" href="assets/images/favicon.ico"/>
-    <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no">
+        <title>LlavaRock. Festival de música</title>
+        <meta name="description" content="Xavier Morell Llorens, Curriculum Vitae (CV).">
+        <meta name="keywords" content="Sant andreu de Llavaneres, music, musica, festival">
+        <link rel="icon" type="image/png" href="assets/images/favicon.ico"/>
+        <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
 
-</head>
-<body>
-<header class="row info-row px-3 py-2">
-    <a class="col-auto logo" href="/">
-        <img src="assets/images/escut_llavaneres.png" alt="Sant Andreu de Llavaneres" class="logo__img" title="Escut Sant Andreu de Llavaneres">
-    </a>
-    <div class="col px-0"></div>
-    <a class="col-auto info-row__link info-row__link--selected" href="grups.html">
-        <span class="align-middle info-row__text">Grups</span>
-    </a>
-    <a class="col-auto info-row__link" href="blog.html">
-        <span lang="en" class="align-middle info-row__text">Blog</span>
-    </a>
-    <a class="col-auto info-row__link" href="contacte.html">
-        <span class="align-middle info-row__text">Contacte</span>
-    </a>
-</header>
-<div class="body">
-
-</div>
-<footer>
-    <div class="footer border-bottom border-white">
-        <div class="row mx-2 mb-2">
-            <div class="col-auto mx-auto">
-                Disfruta del festival a Sant Andreu de llavaneres.
-                <a href="https://goo.gl/maps/kMkjYZH95a5deMnXA">
-                    <i class="fas fa-map-marker-alt"></i>
+    </head>
+    <body>
+        <header class="row info-row px-3 py-2">
+            <a class="col-auto logo" href="/">
+                <img src="assets/images/escut_llavaneres.png" alt="Sant Andreu de Llavaneres" class="logo__img" title="Escut Sant Andreu de Llavaneres">
+            </a>
+            <div class="col px-0"></div>
+            <a class="col-auto info-row__link info-row__link--selected" href="grups.html">
+                <span class="align-middle info-row__text">Grups</span>
+            </a>
+            <a class="col-auto info-row__link" href="blog.html">
+                <span lang="en" class="align-middle info-row__text">Blog</span>
+            </a>
+            <a class="col-auto info-row__link" href="contacte.html">
+                <span class="align-middle info-row__text">Contacte</span>
+            </a>
+        </header>
+        <div class="body">
+            <div class="flex-container my-4 mx-2">
+                <a class="flex-item m-4 p-1 flex-item--bordered flex-container flex-container--column text-dark text-center" href="http://www.elscatarres.cat/" target="_blank" title="Els catarres">
+                    <img src="assets/images/bands/els_catarres.jpg" alt="Catarres" class="flex-item__image">
+                    <b>Els catarres</b>
+                    <span>Pop-Folk</span>
+                    <span>Lorem ipsum ipsum</span>
+                </a>
+                <a class="flex-item m-4 p-1 flex-item--bordered flex-container flex-container--column text-dark text-center" href="https://www.elsamicsdelesarts.cat/" target="_blank" title="Els amics de les arts">
+                    <img src="assets/images/bands/amics_de_les_arts.jpg" alt="Els amics de les arts" class="flex-item__image">
+                    <b>Els amics de les arts</b>
+                    <span>Folk-Pop</span>
+                    <span>Lorem ipsum ipsum</span>
+                </a>
+                <a class="flex-item m-4 p-1 flex-item--bordered flex-container flex-container--column text-dark text-center" href="https://www.txarango.com/" target="_blank" title="Txarango">
+                    <img src="assets/images/bands/txarango.jpg" alt="Txarango" class="flex-item__image">
+                    <b>Txarango</b>
+                    <span>Pop</span>
+                    <span>Lorem ipsum ipsum</span>
+                </a>
+                <a class="flex-item m-4 p-1 flex-item--bordered flex-container flex-container--column text-dark text-center" href="https://www.suumusic.com/" target="_blank" title="Suu">
+                    <img src="assets/images/bands/suu.jpg" alt="Suu" class="flex-item__image">
+                    <b>Suu</b>
+                    <span>Rock</span>
+                    <span>Lorem ipsum ipsum</span>
+                </a>
+                <a class="flex-item m-4 p-1 flex-item--bordered flex-container flex-container--column text-dark text-center" href="http://doctorprats.cat/" target="_blank" title="Doctor prats">
+                    <img src="assets/images/bands/doctor_prats.jpg" alt="Doctor prats" class="flex-item__image">
+                    <b>Doctor prats</b>
+                    <span>Funk</span>
+                    <span>Lorem ipsum ipsum</span>
+                </a>
+                <a class="flex-item m-4 p-1 flex-item--bordered flex-container flex-container--column text-dark text-center" href="https://www.laorejadevangogh.com/" target="_blank" title="La oreja de van Gogh">
+                    <img src="assets/images/bands/la_oreja_de_van_gogh.png" alt="La oreja de van Gogh" class="flex-item__image">
+                    <b>La oreja de van Gogh</b>
+                    <span>Pop-Rock</span>
+                    <span>Lorem ipsum ipsum</span>
+                </a>
+                <a class="flex-item m-4 p-1 flex-item--bordered flex-container flex-container--column text-dark text-center" href="https://www.facebook.com/fitoyfitipaldisoficial" target="_blank" title="Fito & Fitipaldis">
+                    <img src="assets/images/bands/fito.webp" alt="Fito & Fitipaldis" class="flex-item__image">
+                    <b>Fito & Fitipaldis</b>
+                    <span>Rock & Roll</span>
+                    <span>Lorem ipsum ipsum</span>
+                </a>
+                <a class="flex-item m-4 p-1 flex-item--bordered flex-container flex-container--column text-dark text-center" href="https://www.estopa.com/" target="_blank" title="Estopa">
+                    <img src="assets/images/bands/estopa.jpg" alt="Estopa" class="flex-item__image">
+                    <b>Estopa</b>
+                    <span>Rumba flamenca</span>
+                    <span>Lorem ipsum ipsum</span>
+                </a>
+                <a class="flex-item m-4 p-1 flex-item--bordered flex-container flex-container--column text-dark text-center" href="https://www.facebook.com/lildami.welangoda" target="_blank" title="Lilldami">
+                    <img src="assets/images/bands/lilldami.jpg" alt="Lilldami" class="flex-item__image">
+                    <b>Lilldami</b>
+                    <span>Trap</span>
+                    <span>Lorem ipsum ipsum</span>
+                </a>
+                <a class="flex-item m-4 p-1 flex-item--bordered flex-container flex-container--column text-dark text-center" href="https://mikinunez.com/" target="_blank" title="Miki Nuñez">
+                    <img src="assets/images/bands/mikinuñez.jpeg" alt="Miki Nuñez" class="flex-item__image">
+                    <b>Miki Nuñez</b>
+                    <span>Latin-Pop</span>
+                    <span>Lorem ipsum ipsum</span>
+                </a>
+                <a class="flex-item m-4 p-1 flex-item--bordered flex-container flex-container--column text-dark text-center" href="https://www.instagram.com/stay.homas/" target="_blank" title="Stay homas">
+                    <img src="assets/images/bands/stayhomas.jpg" alt="Stay homas" class="flex-item__image">
+                    <b>Stay homas</b>
+                    <span>Indie</span>
+                    <span>Lorem ipsum ipsum</span>
+                </a>
+                <a class="flex-item m-4 p-1 flex-item--bordered flex-container flex-container--column text-dark text-center" href="https://www.laraiz.es/ca/" target="_blank" title="La raiz">
+                    <img src="assets/images/bands/laraiz.jpeg" alt="La raiz" class="flex-item__image">
+                    <b>La raiz</b>
+                    <span>Ska</span>
+                    <span>Lorem ipsum ipsum</span>
                 </a>
             </div>
         </div>
-        <div class="row mb-2">
-            <div class="col-md text-center">
-                <i class="fas fa-phone pr-1"></i>937023600
+        <footer>
+            <div class="footer border-bottom border-white">
+                <div class="row mx-2 mb-2">
+                    <div class="col-auto mx-auto text-center">
+                        Disfruta del festival a Sant Andreu de llavaneres.
+                        <a href="https://goo.gl/maps/kMkjYZH95a5deMnXA">
+                            <i class="fas fa-map-marker-alt"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="row mb-2">
+                    <div class="col-md text-center">
+                        <i class="fas fa-phone pr-1"></i>937023600
+                    </div>
+                    <div class="col-md text-center">
+                        <i class="fas fa-envelope pr-1"></i>ajuntament@llavaneres.cat
+                    </div>
+                    <div class="col-md text-center">
+                        <i class="fas fa-calendar-alt pr-1"></i>28-30 Novembre
+                    </div>
+                </div>
             </div>
-            <div class="col-md text-center">
-                <i class="fas fa-envelope pr-1"></i>ajuntament@llavaneres.cat
+            <div class="row px-3 py-1 info-row">
+                <div class="col-auto logo order-0">
+                    <img src="assets/images/escut_llavaneres.png" alt="Sant Andreu de Llavaneres" class="logo__img" title="Escut Sant Andreu de Llavaneres">
+                </div>
+                <div class="col px-0 order-1"></div>
+                <a class="col-sm-auto info-row__link text-center order-2" href="/">
+                    <span class="align-middle info-row__text">Inici</span>
+                </a>
+                <a class="col-sm-auto info-row__link text-center order-2 info-row__link--selected" href="grups.html">
+                    <span class="align-middle info-row__text">Grups</span>
+                </a>
+                <a class="col-sm-auto info-row__link text-center order-2" href="blog.html">
+                    <span lang="en" class="align-middle info-row__text">Blog</span>
+                </a>
+                <a class="col-sm-auto info-row__link text-center order-2" href="contacte.html">
+                    <span class="align-middle info-row__text">Contacte</span>
+                </a>
+                <div class="col px-0 order-3"></div>
+                <div class="col-auto social order-1 order-sm-4">
+                    <a class="social__item" href="https://www.facebook.com/AjLlavaneres/">
+                        <img src="assets/images/facebooklogo.png" alt="Facebook" class="social__img social__img--facebook" title="Facebook">
+                    </a>
+                    <a class="social__item" href="https://twitter.com/AjLlavaneres">
+                        <img src="assets/images/twitter.png" alt="Twitter" class="social__img" title="Twitter">
+                    </a>
+                </div>
             </div>
-            <div class="col-md text-center">
-                <i class="fas fa-calendar-alt pr-1"></i>28-30 Novembre
-            </div>
-        </div>
-    </div>
-    <div class="row px-3 py-1 info-row">
-        <div class="col-auto logo order-0">
-            <img src="assets/images/escut_llavaneres.png" alt="Sant Andreu de Llavaneres" class="logo__img" title="Escut Sant Andreu de Llavaneres">
-        </div>
-        <div class="col px-0 order-1"></div>
-        <a class="col-sm-auto info-row__link text-center order-2" href="/">
-            <span class="align-middle info-row__text">Inici</span>
-        </a>
-        <a class="col-sm-auto info-row__link text-center order-2 info-row__link--selected" href="grups.html">
-            <span class="align-middle info-row__text">Grups</span>
-        </a>
-        <a class="col-sm-auto info-row__link text-center order-2" href="blog.html">
-            <span lang="en" class="align-middle info-row__text">Blog</span>
-        </a>
-        <a class="col-sm-auto info-row__link text-center order-2" href="contacte.html">
-            <span class="align-middle info-row__text">Contacte</span>
-        </a>
-        <div class="col px-0 order-3"></div>
-        <div class="col-auto social order-1 order-sm-4">
-            <a class="social__item" href="https://www.facebook.com/AjLlavaneres/">
-                <img src="assets/images/facebooklogo.png" alt="Facebook" class="social__img social__img--facebook" title="Facebook">
-            </a>
-            <a class="social__item" href="https://twitter.com/AjLlavaneres">
-                <img src="assets/images/twitter.png" alt="Twitter" class="social__img" title="Twitter">
-            </a>
-        </div>
-    </div>
-</footer>
-<script src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
-</body>
+        </footer>
+        <script src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
+    </body>
 </html>
