--- a/src/index.html
+++ b/src/index.html
@@ -28,67 +28,125 @@
         </header>
         <div class="body">
             <div class="grid-container my-4 mx-2">
-                <div class="grid-item">
-                    <img src="assets/images/bands/els_catarres.jpg" alt="Catarres" class="grid-item__image">
-                    <div class="grid-item__info--hovershow">
-                        <span></span>
+                <a class="grid-item grid-item--double" href="http://www.elscatarres.cat/" target="_blank" title="Els catarres">
+                    <img src="assets/images/bands/els_catarres.jpg" alt="Els catarres" class="grid-item__image">
+                    <div class="grid-item__info--hovershow grid-item__info--grey grid-item__info"></div>
+                    <div class="grid-item__info--hovershow grid-item__info--middletext grid-item__info">
+                        Els catarres
                     </div>
-                </div>
-                <div class="grid-item align-items-center">
-                    <img src="assets/images/bands/els_catarres.jpg" alt="Catarres" class="grid-item__image">
-                    <div class="grid-item__info--hovershow grid-item__info">
-                        <span class="align-middle">Els catarres</span>
+                </a>
+                <a class="grid-item" href="https://www.elsamicsdelesarts.cat/" target="_blank" title="Els amics de les arts">
+                    <img src="assets/images/bands/amics_de_les_arts.jpg" alt="Els amics de les arts" class="grid-item__image">
+                    <div class="grid-item__info--hovershow grid-item__info--grey grid-item__info"></div>
+                    <div class="grid-item__info--hovershow grid-item__info--middletext grid-item__info">
+                        Els amics de les arts
                     </div>
-                </div>
-                <div class="grid-item">
-                    <img src="assets/images/bands/els_catarres.jpg" alt="Catarres" class="grid-item__image">
-                    <div class="grid-item__info--hovershow">
-
+                </a>
+                <a class="grid-item grid-item--double" href="https://www.txarango.com/" target="_blank" title="Txarango">
+                    <img src="assets/images/bands/txarango.jpg" alt="Txarango" class="grid-item__image">
+                    <div class="grid-item__info--hovershow grid-item__info--grey grid-item__info"></div>
+                    <div class="grid-item__info--hovershow grid-item__info--middletext grid-item__info">
+                        Txarango
                     </div>
-                </div>
-                <div class="grid-item">
-                    <img src="assets/images/bands/els_catarres.jpg" alt="Catarres" class="grid-item__image">
-                    <div class="grid-item__info--hovershow">
-
+                </a>
+                <a class="grid-item" href="https://www.suumusic.com/" target="_blank" title="Suu">
+                    <img src="assets/images/bands/suu.jpg" alt="Suu" class="grid-item__image">
+                    <div class="grid-item__info--hovershow grid-item__info--grey grid-item__info"></div>
+                    <div class="grid-item__info--hovershow grid-item__info--middletext grid-item__info">
+                        Suu
                     </div>
-                </div>
-                <div class="grid-item">
-                    <img src="assets/images/bands/els_catarres.jpg" alt="Catarres" class="grid-item__image">
-                    <div class="grid-item__info--hovershow">
-
+                </a>
+                <a class="grid-item" href="http://doctorprats.cat/" target="_blank" title="Doctor prats">
+                    <img src="assets/images/bands/doctor_prats.jpg" alt="Doctor prats" class="grid-item__image">
+                    <div class="grid-item__info--hovershow grid-item__info--grey grid-item__info"></div>
+                    <div class="grid-item__info--hovershow grid-item__info--middletext grid-item__info">
+                        Doctor prats
                     </div>
-                </div>
-                <div class="grid-item">
-                    <img src="assets/images/bands/els_catarres.jpg" alt="Catarres" class="grid-item__image">
-                    <div class="grid-item__info--hovershow">
-
+                </a>
+                <a class="grid-item grid-item--double" href="https://www.laorejadevangogh.com/" target="_blank" title="La oreja de van Gogh">
+                    <img src="assets/images/bands/la_oreja_de_van_gogh.png" alt="La oreja de van Gogh" class="grid-item__image">
+                    <div class="grid-item__info--hovershow grid-item__info--grey grid-item__info"></div>
+                    <div class="grid-item__info--hovershow grid-item__info--middletext grid-item__info">
+                        La oreja de van Gogh
                     </div>
-                </div>
-                <div class="grid-item">
-                    <img src="assets/images/bands/els_catarres.jpg" alt="Catarres" class="grid-item__image">
-                    <div class="grid-item__info--hovershow">
-
+                </a>
+                <a class="grid-item" href="https://www.facebook.com/fitoyfitipaldisoficial" target="_blank" title="Fito & Fitipaldis">
+                    <img src="assets/images/bands/fito.webp" alt="Fito & Fitipaldis" class="grid-item__image">
+                    <div class="grid-item__info--hovershow grid-item__info--grey grid-item__info"></div>
+                    <div class="grid-item__info--hovershow grid-item__info--middletext grid-item__info">
+                        Fito & Fitipaldis
                     </div>
-                </div>
-                <div class="grid-item">
-                    <img src="assets/images/bands/els_catarres.jpg" alt="Catarres" class="grid-item__image">
-                    <div class="grid-item__info--hovershow">
-
+                </a>
+                <a class="grid-item" href="https://www.estopa.com/" target="_blank" title="Estopa">
+                    <img src="assets/images/bands/estopa.jpg" alt="Estopa" class="grid-item__image">
+                    <div class="grid-item__info--hovershow grid-item__info--grey grid-item__info"></div>
+                    <div class="grid-item__info--hovershow grid-item__info--middletext grid-item__info">
+                        Estopa
                     </div>
-                </div>
-                <div class="grid-item">
-                    <img src="assets/images/bands/els_catarres.jpg" alt="Catarres" class="grid-item__image">
-                    <div class="grid-item__info--hovershow">
-
+                </a>
+                <a class="grid-item" href="contacte.html" title="Contacte">
+                    <img src="assets/images/bands/contacto.jpg" alt="Contacte" class="grid-item__image">
+                    <div class="grid-item__info--hovershow grid-item__info--grey grid-item__info"></div>
+                    <div class="grid-item__info--hovershow grid-item__info--middletext grid-item__info">
+                        Contacte
                     </div>
-                </div>
+                </a>
+                <a class="grid-item grid-item--double" href="https://ajllavaneres.cat/" target="_blank" title="Calendari">
+                    <img src="assets/images/bands/november.jpg" alt="Calendari" class="grid-item__image">
+                    <div class="grid-item__info--hovershow grid-item__info--grey grid-item__info"></div>
+                    <div class="grid-item__info--hovershow grid-item__info--middletext grid-item__info">
+                        Calendari
+                    </div>
+                </a>
+                <a class="grid-item" href="blog.html" title="Blog">
+                    <img src="assets/images/bands/blog.jpg" alt="Blog" class="grid-item__image">
+                    <div class="grid-item__info--hovershow grid-item__info--grey grid-item__info"></div>
+                    <div class="grid-item__info--hovershow grid-item__info--middletext grid-item__info">
+                        Blog
+                    </div>
+                </a>
+                <a class="grid-item" href="https://www.facebook.com/lildami.welangoda" target="_blank" title="Lilldami">
+                    <img src="assets/images/bands/lilldami.jpg" alt="Lilldami" class="grid-item__image">
+                    <div class="grid-item__info--hovershow grid-item__info--grey grid-item__info"></div>
+                    <div class="grid-item__info--hovershow grid-item__info--middletext grid-item__info">
+                        Lilldami
+                    </div>
+                </a>
+                <a class="grid-item grid-item--double" href="https://mikinunez.com/" target="_blank" title="Miki Nuñez">
+                    <img src="assets/images/bands/mikinuñez.jpeg" alt="Miki nuñez" class="grid-item__image">
+                    <div class="grid-item__info--hovershow grid-item__info--grey grid-item__info"></div>
+                    <div class="grid-item__info--hovershow grid-item__info--middletext grid-item__info">
+                        Miki Nuñez
+                    </div>
+                </a>
+                <a class="grid-item" href="https://www.instagram.com/stay.homas/" target="_blank" title="Stay homas">
+                    <img src="assets/images/bands/stayhomas.jpg" alt="Stay homas" class="grid-item__image">
+                    <div class="grid-item__info--hovershow grid-item__info--grey grid-item__info"></div>
+                    <div class="grid-item__info--hovershow grid-item__info--middletext grid-item__info">
+                        Stay homas
+                    </div>
+                </a>
+                <a class="grid-item" href="https://www.laraiz.es/ca/" target="_blank" title="La raiz">
+                    <img src="assets/images/bands/laraiz.jpeg" alt="La raiz" class="grid-item__image">
+                    <div class="grid-item__info--hovershow grid-item__info--grey grid-item__info"></div>
+                    <div class="grid-item__info--hovershow grid-item__info--middletext grid-item__info">
+                        La raiz
+                    </div>
+                </a>
+                <a class="grid-item" href="https://ajllavaneres.cat/" target="_blank" title="Com arribar">
+                    <img src="assets/images/bands/map.png" alt="Com arribar" class="grid-item__image">
+                    <div class="grid-item__info--hovershow grid-item__info--grey grid-item__info"></div>
+                    <div class="grid-item__info--hovershow grid-item__info--middletext grid-item__info">
+                        Com arribar
+                    </div>
+                </a>
             </div>
 
         </div>
         <footer>
             <div class="footer border-bottom border-white">
                 <div class="row mx-2 mb-2">
-                    <div class="col-auto mx-auto">
+                    <div class="col-auto mx-auto text-center">
                         Disfruta del festival a Sant Andreu de llavaneres.
                         <a href="https://goo.gl/maps/kMkjYZH95a5deMnXA">
                             <i class="fas fa-map-marker-alt"></i>
